# Asus-Hub

./: .gitignore  Cargo.toml  UM5606WA_1002_834C41AF.icm  UM5606WA_1002_834C41AF_CMDEF.icm  build.rs
data/: resources.gresource.xml
locales/: de.yml  en.yml  pt-br.yml
packaging/: asus-hub-appimage.desktop  de.guido.asus-hub.yml
src/: app.rs  main.rs  search.rs  tray.rs
src/backend/: dbus.rs
src/components/: battery.rs  fan.rs  mod.rs
src/components/audio/: mod.rs  sound_modes.rs  volume.rs
src/components/display/: farbskala.rs  helpers.rs  mod.rs  oled_care.rs  oled_dimming.rs  zielmodus.rs
src/components/input/: fn_key.rs  gestures.rs
src/components/keyboard/: auto_backlight.rs  auto_beleuchtung.rs  backlight.rs  fn_key.rs  gestures.rs  mod.rs  ruhezustand.rs  touchpad.rs
src/components/system/: battery.rs  fan.rs  mod.rs
src/services/: commands.rs  config.rs  dbus.rs  edge_gestures.rs  mod.rs
