[package]
name = "asus-hub"
version = "1.0.0"
edition = "2024"

[dependencies]
relm4 = { version = "0.10", features = ["libadwaita"] }
libadwaita = { version = "0.8", features = ["v1_8"] }
gtk4 = { version = "0.10", features = ["v4_14"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
futures-util = "0.3"
ksni = "0.2"
evdev = { version = "0.13.2", features = ["tokio"] }
rust-i18n = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
