[package]
name = "asus-hub"
version = "1.0.4"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/Traciges/Asus-Hub"
description = "Unofficial MyAsus Clone for Asus Laptops"
authors = ["Guido Philipp"]

[dependencies]
relm4 = { version = "0.10", features = ["libadwaita"] }
libadwaita = { version = "0.8", features = ["v1_8"] }
gtk4 = { version = "0.10", features = ["v4_14"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
futures-util = "0.3"
ksni = "0.2"
evdev = { version = "0.13.2", features = ["tokio"] }
rust-i18n = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
glib-build-tools = "0.20"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.deb]
section = "utils"
assets = [
    ["target/release/asus-hub", "usr/bin/asus-hub", "755"],
    ["packaging/de.guido.asus-hub.desktop", "usr/share/applications/", "644"],
    ["packaging/de.guido.asus-hub.metainfo.xml", "usr/share/metainfo/", "644"],
    ["assets/trayicon.png", "usr/share/icons/hicolor/128x128/apps/de.guido.asus-hub.png", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/asus-hub", dest = "/usr/bin/asus-hub", mode = "755" },
    { source = "packaging/de.guido.asus-hub.desktop", dest = "/usr/share/applications/de.guido.asus-hub.desktop", mode = "644" },
    { source = "packaging/de.guido.asus-hub.metainfo.xml", dest = "/usr/share/metainfo/de.guido.asus-hub.metainfo.xml", mode = "644" },
    { source = "assets/trayicon.png", dest = "/usr/share/icons/hicolor/128x128/apps/de.guido.asus-hub.png", mode = "644" }
]

[package.metadata.appimage]
auto_link = true
auto_link_exclude_list = [
    "libc.so*",
    "libdl.so*",
    "libpthread.so*",
    "libm.so*",
    "libgcc_s.so*",
]
icon = "assets/trayicon.png"
desktop_entry = "packaging/asus-hub-appimage.desktop"
assets = ["packaging/appimage/usr"]
